@@ -1,4 +1,4 @@
-// -*- C++ -*- Time-stamp: <07/07/16 16:33:17 ptr>
+// -*- C++ -*- Time-stamp: <07/07/17 00:38:11 ptr>
 
 #include "exam_test_suite.h"
 
@@ -169,6 +169,70 @@ int EXAM_IMPL(exam_basic_test::dep_test_suite)
   return EXAM_RESULT;
 }
 
+int EXAM_IMPL(exam_basic_test::multiple_dep)
+{
+  buff.str( "" );
+  buff.clear();
+  
+  exam::test_suite t( "exam self test, fail function" );
+  t.set_logger( &logger );
+
+  test_x tx;
+
+  exam::test_suite::test_case_type tc[2];
+
+  tc[0] = t.add( &test_x::f_good, tx, "member function good" );
+  tc[1] = t.add( func_good, "function good" );
+
+  t.add( func, "function fail", tc, tc + 2 );
+  t.add( &test_x::f, tx, "member function fail", tc, tc + 2 );
+  t.add( func_good2, "function 2 good", tc, tc + 2 );
+
+  t.girdle();
+
+  EXAM_REQUIRE( buff.str() == r8 );
+
+  // std::cerr << "%%%\n";
+  // std::cerr << buff.str() << std::endl;
+  // std::cerr << "%%%\n";
+
+  return EXAM_RESULT;
+}
+
+int EXAM_IMPL(exam_basic_test::multiple_dep_complex)
+{
+  buff.str( "" );
+  buff.clear();
+  
+  exam::test_suite t( "exam self test, fail function" );
+  t.set_logger( &logger );
+
+  test_x tx;
+
+  exam::test_suite::test_case_type tc[2];
+  exam::test_suite::test_case_type tcx[2];
+
+  tc[0] = t.add( &test_x::f_good, tx, "member function good" );
+  tc[1] = t.add( func_good, "function good" );
+
+  tcx[0] = t.add( func, "function fail", tc, tc + 2 );
+  t.add( &test_x::f, tx, "member function fail", tc, tc + 2 );
+  tcx[1] = t.add( func_good2, "function 2 good", tc, tc + 2 );
+  t.add( func_good3, "function 3 good", tcx, tcx + 2 ); //  <-- problem
+
+  logger.flags( exam::base_logger::verbose );
+  t.girdle();
+  logger.flags( 0 );
+
+  // EXAM_REQUIRE( buff.str() == r9 );
+
+  std::cerr << "%%%\n";
+  std::cerr << buff.str() << std::endl;
+  std::cerr << "%%%\n";
+
+  return EXAM_RESULT;
+}
+
 const std::string exam_basic_test::r0 = "\
 *** PASS exam self test, good function (+2-0~0/2) ***\n";
 
@@ -223,17 +287,32 @@ dummy_test.cc:16: fail: false\n\
   FAIL slave test suite\n\
 *** FAIL exam self test, test suites dependency (+1-1~0/2) ***\n";
 
+const std::string exam_basic_test::r8 = "\
+dummy_test.cc:5: fail: false\n\
+  FAIL function fail\n\
+dummy_test.cc:16: fail: false\n\
+  FAIL member function fail\n\
+*** FAIL exam self test, fail function (+3-2~0/5) ***\n";
+
+const std::string exam_basic_test::r9 = "\
+dummy_test.cc:5: fail: false\n\
+  FAIL function fail\n\
+dummy_test.cc:16: fail: false\n\
+  FAIL member function fail\n\
+*** FAIL exam self test, fail function (+3-2~1/6) ***\n";
+
 int EXAM_IMPL(exam_self_test)
 {
   exam::test_suite t( "exam self test" );
   exam_basic_test exam_basic;
 
-  t.add( &exam_basic_test::function_good, exam_basic, "call test, good calls" );
-  t.add( &exam_basic_test::function, exam_basic, "call test, fail calls" );
-  exam::test_suite::test_case_type d = t.add( &exam_basic_test::dep, exam_basic, "call test, tests dependency" );
+  exam::test_suite::test_case_type d0 = t.add( &exam_basic_test::function_good, exam_basic, "call test, good calls" );
+  t.add( &exam_basic_test::function, exam_basic, "call test, fail calls", d0 );
+  exam::test_suite::test_case_type d = t.add( &exam_basic_test::dep, exam_basic, "call test, tests dependency", d0 );
   t.add( &exam_basic_test::trace, exam_basic, "trace flags test", d );
   t.add( &exam_basic_test::dep_test_suite, exam_basic, "test suites grouping", d );
+  exam::test_suite::test_case_type d2 = t.add( &exam_basic_test::multiple_dep, exam_basic, "multiple dependencies", d );
+  // t.add( &exam_basic_test::multiple_dep_complex, exam_basic, "complex multiple dependencies", d2 );
 
   return t.girdle();
 }
-
